description = "benchmark"

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'infra.application'

configure(allprojects) {
  group = "cn.taketoday.benchmark"

  repositories {
    mavenLocal()
    mavenCentral()
    maven { url = "https://central.sonatype.com/repository/maven-snapshots/" }
  }
}

dependencies {
  implementation 'cn.taketoday:infra-starter-application'
  implementation 'cn.taketoday:infra-starter-netty-server'
  implementation 'cn.taketoday:infra-starter-json'
  implementation 'cn.taketoday:infra-starter-jdbc'
  implementation 'cn.taketoday:infra-starter-persistence'
  implementation 'cn.taketoday:infra-starter-webmvc'
  implementation 'cn.taketoday:infra-starter-freemarker'

  implementation 'com.mysql:mysql-connector-j'

  implementation 'ch.qos.logback:logback-classic'
  implementation 'com.github.ben-manes.caffeine:caffeine'

  implementation('io.netty:netty-transport-native-epoll') {
    artifact {
      classifier = 'linux-x86_64'
    }
  }

  implementation('io.netty:netty-transport-native-io_uring') {
    artifact {
      classifier = 'linux-x86_64'
    }
  }

//  implementation('io.netty:netty-transport-native-kqueue') {
//    artifact {
//      classifier = 'osx-aarch_64'
//    }
//  }

}

java {
  sourceCompatibility = JavaVersion.VERSION_25
  targetCompatibility = JavaVersion.VERSION_25
}

application {
  mainClass = 'cn.taketoday.benchmark.BenchmarkApplication'
  applicationDefaultJvmArgs = [
      "-server",
      "-Xms2G",
      "-Xmx2G",
      "-XX:+UseNUMA",
      "-XX:+UseStringDeduplication",
      "-Dinfra.profiles.active=test",
      "-Dio.netty.buffer.checkBounds=false",
      "-Dio.netty.buffer.checkAccessible=false",
      "-Dio.netty.leakDetection.level=disabled",
      "-Dio.netty.iouring.iosqeAsyncThreshold=32000",
      "-Djava.lang.Integer.IntegerCache.high=10000",
      "--add-opens=java.base/java.nio=ALL-UNNAMED",
      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
  ]
}
